# NaxiStudioMix

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
DB/: catalog.json  main.db
DB/musical/grid/: 2023-11-03.json  2023-11-09.json  2024-11-10.json  standard.json
UI/: backup.ui  configurations.cpp  configurations.h  configurations.ui  player.cpp  player.h  player.ui
UI/forms/: player.qrc
UI/resources/: player.qrc
UI/widgets/: fileslistwidget.cpp  fileslistwidget.h  filewidget.cpp  filewidget.h  folderswidget.cpp  folderswidget.h  hourwidget.h  itemlistfiles.cpp  itemlistfiles.h  listfolders.cpp  listfolders.h  playerwidget.cpp  playerwidget.h  playerwidget.ui
UI/widgets/components/: playlist.cpp  playlistitem.cpp  playlistitem.h
UI/widgets/files/: filewidget.cpp  filewidget.h  folderswidget.h  itemlistfiles.cpp  itemlistfiles.h  itemlistthread.cpp  itemlistthread.h  listfolders.cpp  listfolders.h
UI/widgets/miniplayer/: miniplayer.cpp  miniplayer.h  miniplayer.ui
UI/widgets/playlist/: hourlist.cpp  hourlist.h  playlist.h  playlistitem.h  playlistitemwidget.cpp  playlistitemwidget.h  playlistlist.cpp  playlistlist.h
backend/audio/: audioplayer.cpp  audioplayer.h
backend/files/: fileslist.cpp  fileslist.h  folderslist.cpp  folderslist.h
backend/playlist/: openplaylist.cpp  openplaylist.h
db/musical/grid/: 2024-07-25.json  standard.json
db/musical/models/: standard.json
db_rename/: catalog.json
frontend/: player.ui
frontend/resources/: NaxiStudioMix.rc
frontend/widgets/files/: fileslistwidget.cpp
frontend/widgets/player/: playerwidget.h
frontend/widgets/playlist/: playlistitemwidget.cpp  playlistlist.cpp
ui/: player.ui
ui/widgets/files/: folderswidget.cpp
ui/widgets/playlist/: playlistitemwidget.h  playlistlist.h
ui_rename/: player.cpp
ui_rename/resources/icons/: NaxiStudio.rc
ui_rename/widgets/files/: fileslistwidget.h
ui_rename/widgets/playlist/: hourlist.h  hourwidget.cpp
